# webkit2gtk4-1-rs

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  Gir.toml  README.md
.github/workflows/: CI.yml  docs.yml
examples/: Cargo.toml  main.rs
javascriptcore/: Cargo.toml  Gir.toml
javascriptcore/src/: global_context_ref.rs  lib.rs  string_ref.rs  value_ref.rs
javascriptcore/src/auto/: class.rs  context.rs  enums.rs  exception.rs  flags.rs  mod.rs  value.rs  virtual_machine.rs  weak_value.rs
javascriptcore/sys/: Cargo.toml  Gir.toml  build.rs
javascriptcore/sys/src/: lib.rs
javascriptcore/sys/tests/: abi.rs  constant.c  layout.c
src/: credential.rs  javascript_result.rs  lib.rs  rt.rs  web_context.rs  web_view.rs  website_data_manager.rs
src/auto/: application_info.rs  authentication_request.rs  automation_session.rs  back_forward_list.rs  back_forward_list_item.rs  color_chooser_request.rs  context_menu.rs  context_menu_item.rs  cookie_manager.rs  device_info_permission_request.rs  download.rs  editor_state.rs  enums.rs  favicon_database.rs  file_chooser_request.rs  find_controller.rs  flags.rs  form_submission_request.rs  geolocation_manager.rs  geolocation_permission_request.rs  geolocation_position.rs  hit_test_result.rs  input_method_context.rs  input_method_underline.rs  install_missing_media_plugins_permission_request.rs  itp_first_party.rs  itp_third_party.rs  mime_info.rs  mod.rs  navigation_action.rs  navigation_policy_decision.rs  network_proxy_settings.rs  notification.rs  notification_permission_request.rs  option_menu.rs  option_menu_item.rs  permission_request.rs  plugin.rs  pointer_lock_permission_request.rs  policy_decision.rs  (+26 more)
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
sys/tests/: abi.rs
webkit2gtk/: Cargo.toml  Gir.toml
webkit2gtk-gir-files/: JavaScriptCore-4.0.gir  JavaScriptCore-4.0.xsl  JavaScriptCore-4.1-patch.gir  JavaScriptCore-4.1.gir  JavaScriptCore-4.1.xsl  JavaScriptCore-5.0-patch.gir  JavaScriptCore-5.0.gir  JavaScriptCore-5.0.xsl  Soup-2.4.gir  Soup-3.0.gir  WebKit2-4.0.gir  WebKit2-4.1.gir  WebKit2-5.0.gir  WebKit2WebExtension-4.0.gir  WebKit2WebExtension-4.1.gir  WebKit2WebExtension-5.0.gir  dl.py  fix.sh
webkit2gtk-webextension/: Cargo.toml  Gir.toml
webkit2gtk-webextension/src/: dom_html_field_set_element.rs  lib.rs
webkit2gtk-webextension/src/auto/: console_message.rs  context_menu.rs  context_menu_item.rs  dom_attr.rs  dom_blob.rs  dom_cdata_section.rs  dom_character_data.rs  dom_client_rect.rs  dom_client_rect_list.rs  dom_comment.rs  dom_css_rule.rs  dom_css_rule_list.rs  dom_css_style_declaration.rs  dom_css_style_sheet.rs  dom_css_value.rs  dom_document.rs  dom_document_fragment.rs  dom_document_type.rs  dom_dom_implementation.rs  dom_dom_selection.rs  dom_dom_token_list.rs  dom_dom_window.rs  dom_element.rs  dom_entity_reference.rs  dom_event.rs  dom_event_target.rs  dom_file.rs  dom_file_list.rs  dom_html_anchor_element.rs  dom_html_applet_element.rs  dom_html_area_element.rs  dom_html_base_element.rs  dom_html_base_font_element.rs  dom_html_body_element.rs  dom_html_br_element.rs  dom_html_button_element.rs  dom_html_canvas_element.rs  dom_html_collection.rs  dom_html_d_list_element.rs  dom_html_directory_element.rs  (+80 more)
webkit2gtk-webextension/sys/: Cargo.toml  Gir.toml  build.rs  versions.txt
webkit2gtk-webextension/sys/src/: lib.rs
webkit2gtk-webextension/sys/tests/: abi.rs  constant.c  layout.c
webkit2gtk/src/: authentication_request.rs  credential.rs  javascript_result.rs  lib.rs  web_context.rs  web_view.rs  website_data_manager.rs
webkit2gtk/src/auto/: application_info.rs  authentication_request.rs  automation_session.rs  back_forward_list.rs  back_forward_list_item.rs  color_chooser_request.rs  context_menu.rs  context_menu_item.rs  cookie_manager.rs  device_info_permission_request.rs  download.rs  editor_state.rs  enums.rs  favicon_database.rs  file_chooser_request.rs  find_controller.rs  flags.rs  form_submission_request.rs  geolocation_manager.rs  geolocation_permission_request.rs  geolocation_position.rs  hit_test_result.rs  input_method_context.rs  input_method_underline.rs  install_missing_media_plugins_permission_request.rs  itp_first_party.rs  itp_third_party.rs  media_key_system_permission_request.rs  memory_pressure_settings.rs  mime_info.rs  mod.rs  navigation_action.rs  navigation_policy_decision.rs  network_proxy_settings.rs  notification.rs  notification_permission_request.rs  option_menu.rs  option_menu_item.rs  permission_request.rs  plugin.rs  (+31 more)
webkit2gtk/sys/: Cargo.toml  Gir.toml  build.rs
webkit2gtk/sys/src/: lib.rs
webkit2gtk/sys/tests/: abi.rs  constant.c  layout.c
