[package]
name = "webkit-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { package = "glib", version="0.18" }
gio = { package = "gio", version="0.18" }
gtk = { package = "gtk", versoin="0.18" }
webkit2gtk = { path = "../webkit2gtk", package = "webkit2gtk4", features = ["v2_34"]}

[[bin]]
name = "view"
path = "main.rs"
