[package]
name = "javascriptcore5-rs"
version = "0.15.3"
edition = "2018"
description = "Rust bindings for the javacriptcore library"
repository = "https://github.com/vhdirk/javascriptcore-rs"
license = "MIT"
keywords = ["javascript", "gtk-rs", "gnome"]

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "javascriptcore"

[dependencies]
bitflags = "^1.0"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[dependencies.ffi]
package = "javascriptcore5-rs-sys"
path = "./sys"
version = "0.3.0"

[features]
v2_28 = ["ffi/v2_28"]
dox = ["ffi/dox"]
