[package]
name = "javascriptcore5-rs-sys"
version = "0.3.0"
authors = ["The Gtk-rs Project Developers"]
description = "Sys functions for the Rust bindings of the javacriptcore library"
repository = "https://github.com/vhdirk/javascriptcore-rs"
license = "MIT"
homepage = "http://gtk-rs.org"
keywords = ["javascript", "gtk-rs", "gnome"]
build = "build.rs"
edition = "2018"
[package.metadata.system-deps.javascriptcoregtk_5_0]
name = "javascriptcoregtk-5.0"
version = "2.24"

[package.metadata.system-deps.javascriptcoregtk_5_0.v2_28]
version = "2.28"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "javascriptcore5_rs_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "5"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_28 = []
dox = []
