[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"
bitflags = "^1.0"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gtk4-sys]
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.javascriptcore5-rs-sys]
path = "../../javascriptcore/sys"

[dependencies.soup3-sys]
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v2_6 = []
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_24 = ["v2_22"]
v2_26 = ["v2_22"]
v2_28 = ["v2_26"]
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]

[lib]
name = "webkit2gtk_webextension_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "webkit2gtk5_webextension"
name = "webkit2gtk5-webextension-sys"
version = "0.5.0"
edition = "2018"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.webkit2gtk_web_extension_5_0]
name = "webkit2gtk-web-extension-5.0"
version = "2.4"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_6]
version = "2.6"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_8]
version = "2.8"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_10]
version = "2.10"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_12]
version = "2.12"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_14]
version = "2.14"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_16]
version = "2.16"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_18]
version = "2.18"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_20]
version = "2.20"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_22]
version = "2.22"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_26]
version = "2.26"

[package.metadata.system-deps.webkit2gtk_web_extension_5_0.v2_28]
version = "2.28"
